WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58457
Some borders with border-radius do not have rounded inner edges
https://bugs.webkit.org/show_bug.cgi?id=58457
Summary
Some borders with border-radius do not have rounded inner edges
Simon Fraser (smfr)
Reported
2011-04-13 10:58:20 PDT
Created
attachment 89401
[details]
Testcase See attached testcase and screenshot; WebKit does a really poor job of rendering some rounded borders.
Attachments
Testcase
(1.19 KB, text/html)
2011-04-13 10:58 PDT
,
Simon Fraser (smfr)
no flags
Details
Screenshot: Firefox (left) vs. WebKit (right)
(163.22 KB, image/png)
2011-04-13 10:58 PDT
,
Simon Fraser (smfr)
no flags
Details
Screenshot: Firefox (left) vs. WebKit (right)
(181.90 KB, image/png)
2011-04-13 13:51 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(200.84 KB, text/plain)
2011-04-13 21:42 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(200.74 KB, patch)
2011-04-13 22:25 PDT
,
Simon Fraser (smfr)
bdakin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-04-13 10:58:52 PDT
Created
attachment 89402
[details]
Screenshot: Firefox (left) vs. WebKit (right)
Simon Fraser (smfr)
Comment 2
2011-04-13 13:51:04 PDT
Created
attachment 89449
[details]
Screenshot: Firefox (left) vs. WebKit (right) In previous screenshot, WebKit was patched.
Simon Fraser (smfr)
Comment 3
2011-04-13 21:42:55 PDT
Created
attachment 89529
[details]
Patch
WebKit Review Bot
Comment 4
2011-04-13 22:08:23 PDT
Attachment 89529
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8401569
Simon Fraser (smfr)
Comment 5
2011-04-13 22:23:40 PDT
Comment on
attachment 89529
[details]
Patch Will fix cr-linux
Simon Fraser (smfr)
Comment 6
2011-04-13 22:25:09 PDT
Created
attachment 89532
[details]
Patch
Beth Dakin
Comment 7
2011-04-14 12:46:45 PDT
Comment on
attachment 89532
[details]
Patch I feel like this code could use more comments. r=me.
WebKit Review Bot
Comment 8
2011-04-15 18:19:13 PDT
http://trac.webkit.org/changeset/83998
might have broken GTK Linux 32-bit Debug The following tests are not passing: svg/W3C-SVG-1.1/animate-elem-82-t.svg
Simon Fraser (smfr)
Comment 9
2011-04-17 09:44:00 PDT
http://trac.webkit.org/changeset/83998
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug